<resources>
    <string name="app_name" translatable="false">RUTMath</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="save">Save</string>
    <string name="empty">Empty</string>
    <string name="scoreboard">Scoreboard:</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="score">Score:</string>
    <string name="duel_score">%s score: %d\n%s score: %d</string>
    <string name="scoreboard_format">%d. %s</string>
    <string name="nick_empty">Nickname can not be empty!</string>
    <string name="fragment_settings_select_language">Select language</string>
    <string name="fragment_settings_max_number">Max. number for duel</string>
    <string name="fragment_menu_university">Rzeszów University of Technology</string>
    <string name="battle_view_bonus">Sequention bonus +%d</string>
    <string name="fragment_modes_instruction">Select an exercise from the list:</string>
    <string name="fragment_modes_add_sub">Addition and Substraction</string>
    <string name="fragment_modes_mul_div">Multiplication and Division</string>
    <string name="fragment_modes_divisibility">Divisibility</string>
    <string name="fragment_modes_units">Unit conversion</string>
    <string name="fragment_modes_table">Multiplication table</string>
    <string name="fragment_choose_player_instruction">Choose a player from the list\nor create new one with plus button</string>
    <string name="fragment_player_names_instruction">Enter players nicknames</string>
    <string name="fragment_player_names_nickname_1">Player1 (top) nickname:</string>
    <string name="fragment_player_names_nickname_2">Player2 (bottom) nickname:</string>
    <string name="fragment_player_names_start">Start</string>
    <string name="fragment_scoreboard_empty">Scores list is empty.\nPlay in battle mode to see best players results!</string>
    <string name="units_help_hint">Hint</string>
    <string name="settings_fragment_max_number">Value can not be bigger than: %1$d</string>
    <string name="settings_fragment_min_number">Value can not be smaller than: %1$d</string>
    <string name="battle_game_ended">Game ended</string>
    <string name="choose_player_input">Enter nickname of new player:</string>
    <string name="choose_player_nick_exist">Nickname exists!</string>
    <string name="divisibility_difficulty_1">Easy</string>
    <string name="divisibility_difficulty_2">Medium</string>
    <string name="divisibility_difficulty_3">Hard</string>
    <string name="divisibility_difficulty_4">Very Hard</string>
    <string name="divisibility_question_p1">Is</string>
    <string name="divisibility_question_p2">divisible by</string>
    <string name="units_time">Time</string>
    <string name="units_length">Length</string>
    <string name="units_weight">Weight</string>
    <string name="units_surface">Surface</string>
    <string name="units_all">All</string>
    <string name="time_units">d,h,min,sec</string>
    <string name="question_mark" translatable="false">?</string>
    <string name="prz_url">https://w.prz.edu.pl/en/</string>
    <string name="weii_url">https://weii.prz.edu.pl/en/</string>
    <string name="menu_play">Exercises</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pvp">Battle</string>
    <string name="menu_leaderboard">Leaderboard</string>

</resources>
