<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.fragment.MenuFragment">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_image" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <LinearLayout
            android:id="@+id/addSubLayout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_in_tile_mode_light"
                android:scaleType="center"
                android:src="@drawable/ic_add_sub" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fragment_modes_add_sub"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mulDivLayout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_in_tile_mode_light"
                android:scaleType="center"
                android:src="@drawable/ic_mult_div" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_modes_mul_div"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/divisibilityLayout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_in_tile_mode_light"
                android:scaleType="center"
                android:src="@drawable/ic_divisibility" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fragment_modes_divisibility"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/unitsLayout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_in_tile_mode_light"
                android:scaleType="center"
                android:src="@drawable/ic_units" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_modes_units"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tableLayout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_in_tile_mode_light"
                android:scaleType="center"
                android:src="@drawable/ic_table" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_modes_table"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|center_vertical"
        android:lines="2"
        android:minLines="2"
        android:text="@string/fragment_modes_instruction"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>