<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_gradient"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_image" />

    <TextView
        android:id="@+id/maxBattleModeNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_settings_max_number"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/maxBattleModeNumberLayout"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxBattleModeNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxBattleModeNumberTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxBattleModeNumber"
            android:layout_width="match_parent"
            android:inputType="number"
            android:maxLength="3"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/selectLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_settings_select_language"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/maxBattleModeNumberLayout"
        app:layout_constraintTop_toBottomOf="@+id/maxBattleModeNumberLayout" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLanguageTitle">

        <RadioButton
            android:id="@+id/rb_English"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="English   "
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"/>

        <RadioButton
            android:id="@+id/rb_Polish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="Polski   "
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_language" />

</androidx.constraintlayout.widget.ConstraintLayout>