<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.fragment.MenuFragment">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_image"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="352dp" />

    <ImageView
        android:id="@+id/przLogo"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/prz_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weiiLogo"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/weii_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przLogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/accent_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/fragment_menu_university"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#F69A3D"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/modesButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_in_tile_menu"
                android:scaleType="centerInside"
                android:src="@drawable/ic_dumbbell_solid" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/fira_sans_medium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_play"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pvpButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="148dp"
                android:background="@drawable/bg_in_tile_menu"
                android:scaleType="centerInside"
                android:src="@drawable/ic_gamepad_solid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/fira_sans_medium"
                android:gravity="center"
                android:text="@string/menu_pvp"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboardButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="140dp"
                android:background="@drawable/bg_in_tile_menu"
                android:scaleType="centerInside"
                android:src="@drawable/ic_trophy_solid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.755"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/fira_sans_medium"
                android:gravity="center"
                android:text="@string/menu_leaderboard"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_in_tile_mode_dark"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="148dp"
                android:background="@drawable/bg_in_tile_menu"
                android:scaleType="fitXY"
                android:src="@drawable/ic_settings_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/fira_sans_medium"
                android:gravity="center"
                android:text="@string/menu_settings"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>